2003-07-27  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-flow-holder-blocks.c, cong-editor-area-flow-holder-blocks.h, cong-editor-area-flow-holder-inlines.c, cong-editor-area-flow-holder-inlines.h, cong-editor-area-flow-holder-single.c, cong-editor-area-flow-holder-single.h, Makefile.am

	New files
	
	* cong-document.h, cong-document.c

	Added stats to the document

2003-07-25  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-node.c, cong-editor-node.h, cong-editor-widget.h

	Moved the flow types from the editor-node files into the widget source files
	
	* cong-editor-widget3.c

	Use the flow-holder code to create and lay out the children of an XML node

	* cong-editor-area-flow-holder.c, cong-editor-area-flow-holder.h, Makefile.am 

	New files: editor areas to handle the layout of the children of an XML node
	
	* cong-editor-area-unknown-tag.c

	Fixed a typo
		
	* cong-editor-area-span-tag.c, cong-editor-area-structural-tag.c, cong-editor-area-text.c, cong-editor-area-text.h, cong-editor-area-unknown-tag.c, cong-editor-node-element-span.c, cong-editor-node-text.c, cong-editor-node-unimplemented.c, cong-editor-node.c, cong-editor-node.h, plugin-lists-area-listitem.c

	Added ability for text to contain Pango markup; added an idea of flow type to editor nodes
	
	* cong-text-cache.c

	Added a debug option
	
	* cong-util.c

	Use the default catalog rather than load our own, to avoid path issues

2003-07-24  David Malcolm <david@davemalcolm.demon.co.uk>

	* plugin-lists-area-listitem.c

	Visual improvements
	
	* cong-fake-plugin-hooks.h, main.c

	Added the paragraph plugin; fixed a memory leak in the VFS buffer loader

	* cong-dispspec.c

	Fixed a memory leak

	* plugin-paragraph-area-paragraph.c, plugin-paragraph-area-paragraph.h, plugin-paragraph-node-element-paragraph.c, plugin-paragraph-node-element-paragraph.h, plugin-paragraph.c, Makefile.am

	New files: plugin paragraph renderer
	