@@ -49,6 +49,12 @@ struct CongEditorAreaFlowHolder
 struct CongEditorAreaFlowHolderClass
 {
 	CongEditorAreaClass klass;
+
+	CongEditorArea* (*insert_areas_for_node) (CongEditorAreaFlowHolder *area_flow_holder,
+						  CongEditorNode *node);
+
+	void (*remove_areas_for_node) (CongEditorAreaFlowHolder *area_flow_holder,
+				       CongEditorNode *node);
 };
 
 GType
@@ -59,28 +65,16 @@ cong_editor_area_flow_holder_construct (CongEditorAreaFlowHolder *area_flow_hold
 					CongEditorWidget3 *editor_widget);
 
 CongEditorArea*
-cong_editor_area_flow_holder_new (CongEditorWidget3 *editor_widget);
-
-#if 0
-void
-cong_editor_area_flow_holder_insert_after (CongEditorAreaFlowHolder *area_flow_holder,
-					   CongEditorArea *area,
-					   CongEditorArea *older_sibling_area,
-					   enum CongFlowType flow_type);
-
-void
-cong_editor_area_flow_holder_insert (CongEditorAreaFlowHolder *area_flow_holder,
-				     CongEditorArea *area,
-				     enum CongFlowType flow_type);
-#endif
-
-CongEditorArea*
 cong_editor_area_flow_holder_insert_areas_for_node (CongEditorAreaFlowHolder *area_flow_holder,
 						    CongEditorNode *node);
 void
 cong_editor_area_flow_holder_remove_areas_for_node (CongEditorAreaFlowHolder *area_flow_holder,
 						    CongEditorNode *node);
 
+
+CongEditorAreaFlowHolder*
+cong_editor_area_flow_holder_manufacture (CongEditorWidget3 *editor_widget,
+					  enum CongFlowType flow_type);
 
 
 G_END_DECLS
